--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -5,7 +5,6 @@
        background-color: #f0f0f0;
    }
 
-   /* Estiliza a tabela */
    .table {
        width: 100%;
        margin-bottom: 1rem;
@@ -22,8 +21,14 @@
    .table thead th {
        vertical-align: bottom;
        border-bottom: 2px solid #dee2e6;
+       text-align: center;
    }
 
+
+	.table tbody td {
+	    text-align: center; 
+	}
+	
    .table tbody+tbody {
        border-top: 2px solid #dee2e6;
    }
@@ -37,7 +42,6 @@
        background-color: rgba(0, 0, 0, 0.05);
    }
 
-   /* Personaliza o cabeçalho da tabela */
    .custom-thead {
        background-color: rgb(43, 21, 4);
        color: #ffffff;
