--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -54,6 +54,7 @@
 											<th>Horário</th>
 											<th>Barbeiro</th>
 											<th>Serviço</th>
+											<th>Aguardando</th>
 										</tr>
 									</thead>
 									<tbody>
@@ -64,6 +65,14 @@
 											<td th:text="${agenda.horario}"></td>
 											<td th:text="${agenda.barbeiro}"></td>
 											<td th:text="${agenda.servico}"></td>
+											<td>
+												<form action="#" method="post"
+                                                    th:action="@{/{id}(id=${agenda.id})}" th:object="${agenda}"
+                                                    style="display: inline;">
+                                                    <input type="hidden" name="_method" value="DELETE">
+                                                    <button type="submit" class="btn btn-danger btn-sm">Feito</button>
+                                                </form>
+											</td>
 										</tr>
 									</tbody>
 								</table>
