--- a/src/main/resources/templates/atualizar.html
+++ b/src/main/resources/templates/atualizar.html
@@ -1,99 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Atualizar Agendamento - Barbearia Falcão</title>
+    <title>Barbearia Falcão</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
-    <style>
-        body {
-            display: flex;
-            min-height: 100vh;
-            flex-direction: column;
-            background-color: #f0f0f0; 
-        }
-
-        #wrapper {
-            display: flex;
-            width: 100%;
-        }
-
-        #sidebar-wrapper {
-            min-width: 250px;
-            max-width: 250px;
-            background: rgb(43, 21, 4); 
-            padding-top: 5px; 
-            position: fixed;
-            height: 100%;
-        }
-
-        .sidebar-heading {
-            background: rgb(43, 21, 4); 
-            color: white;
-            padding: 5px 0;
-            margin-bottom: 4px; 
-        }
-
-        .sidebar-heading img {
-            width: 80%; 
-            border-radius: 50%;
-            margin-top: 4px; 
-        }
-
-        .list-group-item {
-            color: white;
-            background-color: rgb(43, 21, 4);
-            border: none;
-            margin-bottom: 2px;
-            padding: 10px 15px;
-            font-size: 1.3rem;
-        }
-
-        .list-group-item:hover {
-            background-color: #f0f0f0;
-            color: black;
-        }
-
-        header {
-            background: #f0f0f0;
-            color: black;
-            text-align: center;
-            padding: 20px 0;
-        }
-
-        header h1 {
-            font-size: 3rem;
-        }
-
-        footer {
-            background: rgb(68, 30, 0);
-            color: white;
-            text-align: center;
-            padding: 10px 0;
-        }
-
-        #page-content-wrapper {
-            flex: 1;
-            padding: 20px;
-            margin-left: 300px;
-        }
-
-        .form-check-input[type="checkbox"] {
-            width: 1.1em;
-            height: 1.1em;
-        }
-
-        .scrollable-list {
-            max-height: 300px;
-            overflow-y: auto;
-        }
-
-        .update-form {
-            display: none;
-            margin-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/styles.css}" />
 </head>
 
 <body>
@@ -103,14 +17,14 @@
             <div class="sidebar-heading text-center py-2">
                 <a href="/">
                     <img src="https://scontent.fbfh1-1.fna.fbcdn.net/v/t1.6435-9/46892121_2149208465396244_9172301611530190848_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Bf0P5YN3TJwQ7kNvgFWtuX1&_nc_ht=scontent.fbfh1-1.fna&oh=00_AYBtXyR8wbH7354M19F-8uVy24X67MJCObYfvFEDIeeNkA&oe=667C6EEA"
-                    class="img-fluid" alt="Barbearia">
+                        class="img-fluid" alt="Barbearia">
                 </a>
             </div>
-			<div class="list-group list-group-flush">
-			    <a href="/" class="list-group-item list-group-item-action">Agendados</a>
-			    <a href="/agendar" class="list-group-item list-group-item-action">Agendamento</a>
-			    <a href="#contact" class="list-group-item list-group-item-action">Contato</a>
-			</div>
+            <div class="list-group list-group-flush">
+                <a href="/" class="list-group-item list-group-item-action">Agendados</a>
+                <a href="/agendar" class="list-group-item list-group-item-action">Agendamento</a>
+                <a href="#contact" class="list-group-item list-group-item-action">Contato</a>
+            </div>
         </div>
 
         <!--Conteúdo da página-->
@@ -121,7 +35,6 @@
                     <h1>Barbearia Falcão</h1>
                 </header>
 
-                <!-- Fila de Espera -->
                 <section id="fila" class="bg-light py-5">
                     <div class="container">
                         <div class="text-center">
@@ -129,167 +42,94 @@
                             <p class="lead">Clientes na fila de espera</p>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 offset-md-3">
-                                <ul class="list-group scrollable-list">
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        João Silva
-                                        <div>
-                                            <button class="btn btn-primary btn-sm" onclick="showUpdateForm()">Atualizar</button>
-                                            <button class="btn btn-danger btn-sm">Deletar</button>
-                                        </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Maria Oliveira
-                                        <div>
-                                            <button class="btn btn-primary btn-sm" onclick="showUpdateForm()">Atualizar</button>
-                                            <button class="btn btn-danger btn-sm">Deletar</button>
-                                        </div>
-                                    </li>
-                                    <li class="list-group-item d-flex justify-content-between align-items-center">
-                                        Pedro Costa
-                                        <div>
-                                            <button class="btn btn-primary btn-sm" onclick="showUpdateForm()">Atualizar</button>
-                                            <button class="btn btn-danger btn-sm">Deletar</button>
-                                        </div>
-                                    </li>
-                                </ul>
+                            <div class="col-md-8 offset-md-2">
+                                <table class="table table-striped table-hover">
+                                    <thead class="custom-thead">
+                                        <tr>
+                                            <th>Nome</th>
+                                            <th>Telefone</th>
+                                            <th>Dia</th>
+                                            <th>Horário</th>
+                                            <th>Barbeiro</th>
+                                            <th>Serviço</th>
+                                            <th>Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr th:each="agenda : ${agenda}">
+                                            <td th:text="${agenda.nome}"></td>
+                                            <td th:text="${agenda.telefone}"></td>
+                                            <td th:text="${agenda.dia}"></td>
+                                            <td th:text="${agenda.horario}"></td>
+                                            <td th:text="${agenda.barbeiro}"></td>
+                                            <td th:text="${agenda.servico}"></td>
+                                            <td>
+                                                <!-- Formulário para Atualizar -->
+                                                <form action="/remarcar/{id}" method="get"
+                                                    th:action="@{/remarcar/{id}(id=${agenda.id})}" th:object="${agenda}"
+                                                    style="display: inline;">
+                                                    <button class="btn btn-primary btn-sm">Atualizar</button>
+                                                </form>
+                                                <!-- Botão de Deletar -->
+                                                <form action="#" method="post"
+                                                    th:action="@{/remover/{id}(id=${agenda.id})}" th:object="${agenda}"
+                                                    style="display: inline;">
+                                                    <input type="hidden" name="_method" value="DELETE">
+                                                    <button type="submit" class="btn btn-danger btn-sm">Deletar</button>
+                                                </form>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </section>
 
-                <!-- Formulário de Atualização de Agendamento -->
-                <section id="update" class="update-form">
+
+                <!-- Contatos -->
+                <section id="contact" class="py-5">
                     <div class="container">
                         <div class="text-center">
-                            <h2>Atualizar Agendamento</h2>
+                            <h2>Contato</h2>
+                            <p class="lead">Entre em contato conosco para mais informações</p>
                         </div>
                         <div class="row">
-                            <div class="col-lg-8 mx-auto">
-                                <form>
-                                    <div class="form-group">
-                                        <label for="name">Nome</label>
-                                        <input type="text" class="form-control" id="name">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="telephone">Telefone</label>
-                                        <input type="tel" class="form-control" id="telephone" placeholder="(__) _____-____">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="day">Dia</label>
-                                        <select class="form-control" id="day">
-                                            <option>Selecione</option>
-                                            <option>Terça-feira</option>
-                                            <option>Quarta-feira</option>
-                                            <option>Quinta-feira</option>
-                                            <option>Sexta-feira</option>
-                                            <option>Sábado</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="hour">Horário</label>
-                                        <select class="form-control" id="hour">
-                                            <option>Selecione</option>
-                                            <option>8h</option>
-                                            <option>9h</option>
-                                            <option>10h</option>
-                                            <option>11h</option>
-                                            <option>12h</option>
-                                            <option>13h</option>
-                                            <option>14h</option>
-                                            <option>15h</option>
-                                            <option>16h</option>
-                                            <option>17h</option>
-                                            <option>18h</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="barber">Barbeiro de preferência</label>
-                                        <select class="form-control" id="barber">
-                                            <option>Sem Preferência</option>
-                                            <option>João</option>
-                                            <option>Gustavo</option>
-                                            <option>Gabriel</option>
-                                            <option>Adilson</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="services">Serviços</label>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="service1">
-                                                    <label class="form-check-label" for="service1">Corte de Cabelo</label>
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="form-check">
-                                                    <input class="form-check-input" type="checkbox" value="" id="service2">
-                                                    <label class="form-check-label" for="service2">Barba</label>
-                                                </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="service3">
-                                                <label class="form-check-label" for="service3">Coloração</label>
-                                                </div>
-                                                </div>
-                                                <div class="col-md-6">
-                                                <div class="form-check">
-                                                <input class="form-check-input" type="checkbox" value="" id="service4">
-                                                <label class="form-check-label" for="service4">Sobrancelhas</label>
-                                                </div>
-                                                </div>
-                                                </div>
-                                                </div>
-                                                <button type="submit" class="btn btn-primary btn-block">Atualizar</button>
-                                                </form>
-                                                </div>
-                                                </div>
-                                                </div>
-                                                </section>
-                                                            <!-- Contatos -->
-            <section id="contact" class="py-5">
-                <div class="container">
-                    <div class="text-center">
-                        <h2>Contato</h2>
-                        <p class="lead">Entre em contato conosco para mais informações</p>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-4 text-center">
-                            <h3>Redes Sociais</h3>
-                            <ul class="list-unstyled">
-                                <li><i class="fab fa-whatsapp"></i> WhatsApp: (41) 99936-0911</li>
-                                <li><i class="fab fa-instagram"></i> Instagram: @barbeariia_falcao</li>
-                                <li><i class="fab fa-facebook"></i> Facebook: Barbearia Falcão</li>
-                            </ul>
-                        </div>
-                        <div class="col-lg-4 text-center">
-                            <h3>Nosso Endereço</h3>
-                            <li>Rua Pedro Gusso, 281</li>
-                            <li>Bairro Novo Mundo</li>
-                            <li>Curitiba - PR</li>
-                        </div>
-                        <div class="col-lg-4 text-center">
-                            <h3>Horário de Atendimento</h3>
-                            <p>Terça a Sábado: 08:00 - 18:00</p>
+                            <div class="col-lg-4 text-center">
+                                <h3>Redes Sociais</h3>
+                                <ul class="list-unstyled">
+                                    <li><i class="fab fa-whatsapp"></i> WhatsApp: (41) 99936-0911</li>
+                                    <li><i class="fab fa-instagram"></i> Instagram: @barbeariia_falcao</li>
+                                    <li><i class="fab fa-facebook"></i> Facebook: Barbearia Falcão</li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-4 text-center">
+                                <h3>Nosso Endereço</h3>
+                                <li>Rua Pedro Gusso, 281</li>
+                                <li>Bairro Novo Mundo</li>
+                                <li>Curitiba - PR</li>
+                            </div>
+                            <div class="col-lg-4 text-center">
+                                <h3>Horário de Atendimento</h3>
+                                <p>Terça a Sábado: 08:00 - 18:00</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </section>                
+                </section>
+            </div>
         </div>
     </div>
-</div>
 
-<!-- Bootstrap -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-<script>
-    function showUpdateForm() {
-        var updateForm = document.getElementById('update');
-        updateForm.style.display = 'block';
-    }
-</script>
+    <!-- Bootstrap -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
+        function showUpdateForm() {
+            var updateForm = document.getElementById('update');
+            updateForm.style.display = 'block';
+        }
+    </script>
 </body>
+
 </html>
